--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "mdb-ui-kit": "^4.4.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.3.0",
     "react-scripts": "^2.1.3",
     "styled-components": "^5.3.5",
     "swiper": "^8.3.2",
